k8s/bes/navidrome/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`navidrome.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: navidrome
          port: 4533
  tls:
    certResolver: letsencrypt
